--- a/SRC/style/style.css
+++ b/SRC/style/style.css
@@ -1809,3 +1809,52 @@ header.scrolled {
 		row-gap: 10px;
 	}
 }
+
+
+.hobbies-container {
+    display: flex;
+    gap: 20px; /* Espace entre les deux */
+}
+
+.hobbies-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.hobbies-main .hobbies-section .hobbies-header2 {
+	margin-bottom: 40px;
+}
+
+.hobbies-main .hobbies-section .hobbies-header2 .header-text {
+	font-size: 1.5rem;
+	font-weight: 600;
+	border: 2px solid  #F6E0A2;
+	border-bottom: 0px;
+	border-radius: 10px 10px 0px 0px;
+	padding-top: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	background: rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(4px);
+}
+
+.hobbies-main .hobbies-section .hobbies-header2 .header-line {
+	width: 100%;
+	height: 4px;
+	background-color:  #F6E0A2;
+	border-radius: 20px;
+}
+
+
+
+.hobbies-main .hobbies-section .section .hobbies .header .header-line2 {
+	height: 4px;
+	border-radius: 10px;
+	width: 100%;
+	background-color:  #F6E0A2}
